# cli

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  create-register-script  gpgopt.py  hello.py  import-script  mygnupg.py  pyproject.toml  requirements.txt  retrieve-script  scmail.py  send-script  test_app.py
scmailclient/: __main__.py  constants.py  gpgopt.py  scmail.py
scripts/: create-register-script  import-script  retrieve-script  send-script  user-pairs-script
tests/: conftest.py  helper.py  pytest.ini  test_multiple_people.py  test_register.py  test_retrieve.py  test_send.py
