[tool.black]
target-version = ['py36', 'py37', 'py38']

[tool.coverage.run]
branch = true
source = ["scmailclient"]

[tool.poetry]
name = "cli"
version = "0.8.0"
description = ""
authors = [
  "Andrew Bespaly <abespaly2@pdx.edu>", 
  "Cameron Pyne <campyne@pdx.edu>", 
  "Dajun Gu <gdajun@pdx.edu>", 
  "Nicholai Venetucci <npv2@pdx.edu>", 
  "Joseph Starr <starr5@pdx.edu>", 
  "Thomas Honnell <thonnell@pdx.edu>", 
  "samgomena <samgomena@protonmail.com>"
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
python-gnupg = "^0.4.6"
click = "^7.1.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = {extras = ["toml"], version = "^5.1"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
